--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,26 +1,23 @@
-name: Test post to slack
-on:
+name: slack-notification
+
+on: 
   workflow_dispatch:
     inputs:
       message:
         description: 'Text to post in slack'
         required: false
         default: 'Hello World!'
-
 jobs:
-  SlackFirstMessage:
-    runs-on: ubuntu-latest
+  slack-notifications:
+    runs-on: ubuntu-20.04
+    name: Sends a message to Slack when a push, a pull request or an issue is made
     steps:
-      - name: Test post to slack
+      - name: Send message to Slack API
         uses: archive/github-actions-slack@v2.0.0
         id: notify
         with:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
           slack-channel: C02NC668LJV
-          slack-text: '${{ github.event.inputs.name }}'
-          slack-optional-icon_emoji: ":fire:"
-          slack-optional-as_user: false
-          
+          slack-text: Hello! Event "${{ github.event_name }}" in "${{ github.repository }}" 🤓
       - name: Result from "Send Message"
-        if: always()
         run: echo "The result was ${{ steps.notify.outputs.slack-result }}"
