--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,11 +14,25 @@ jobs:
     steps:
       - name: Send message to Slack API
         uses: archive/github-actions-slack@v2.0.0
-        id: notify
+        id: send-message
         with:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
           slack-channel: C02NC668LJV
           slack-function: send-message
           slack-text: Hello! Event "${{ github.event_name }}" in "${{ github.repository }}" 🤓
       - name: Result from "Send Message"
-        run: echo "The result was ${{ steps.notify.outputs.slack-result }}"
+        run: echo "The result was ${{ steps.send-message.outputs.slack-result }}"
+      - name: Some step in between
+        run: echo "..."
+      - name: Send Thread Message
+        uses: archive/github-actions-slack@master
+        with:
+          slack-function: send-message
+          slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
+          slack-channel: ${{ fromJson(steps.send-message.outputs.slack-result).response.channel }}
+          slack-text: This is a thread reply
+          slack-optional-thread_ts: ${{ fromJson(steps.send-message.outputs.slack-result).response.message.ts }}
+          #slack-optional-reply_broadcast: true # To broadcast thread reply in channel
+
+      - name: Send "Send Thread Message" Result
+        run: echo "Data - ${{ steps.send-message.outputs.slack-result }}"
