--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,12 +4,12 @@ on:
   workflow_dispatch:
     inputs:
       message:
-        description: 'Text to post in slack'
+        description: 'Display events on slack'
         required: false
         default: 'Hello World!'
 jobs:
   slack-notifications:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     name: Notify Event
     steps:
       - name: Send message to Slack API
@@ -19,7 +19,7 @@ jobs:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
           slack-channel: C02NC668LJV
           slack-function: send-message
-          slack-text: A new event "${{ github.event_name }}" has been triggered by "${{github.actor}}" in "${{ github.repository }}:${{github.ref}}" with sha ${{github.sha}}
+          slack-text: Hello team!! A new "${{ github.event_name }}" has been triggered by "${{github.actor}}" in "${{ github.repository }}:${{github.ref}}" with sha ${{github.sha}}. See the progreess on https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
       - name: Result from "Send Message"
         run: echo "The result was ${{ steps.send-message.outputs.slack-result }}"
       - name: Some step in between
