--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -44,5 +44,5 @@ jobs:
           slack-function: send-message
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
           slack-channel: ${{ fromJson(steps.send-message.outputs.slack-result).response.channel }}
-          slack-text: ":red_cirgle: One or more tests has been failed"
+          slack-text: ":red_circle: One or more tests has been failed"
           slack-optional-thread_ts: ${{ fromJson(steps.send-message.outputs.slack-result).response.message.ts }}
