--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,9 @@ env:
   opt1: 123
   opt2: 456
   opt3: 789
+  deployer-opt1: do1
+  deployer-opt2: do2
+  deployer-opt3: do3
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -43,6 +46,7 @@ jobs:
         run: |
           echo "Changeset: ${{github.event.inputs.changeset-only}}"
           echo "Account: ${{github.event.inputs.account}}"
+          echo "Weird thing: ${{env['deployer-'github.event.inputs.account]}}
           echo "That's all folks!"
       - name: The freaking test
         run: |
