--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,10 @@ env:
 jobs:
   # This workflow contains a single job called "build"
   step1:
+    env:
+      deployer-opt1: do1
+      deployer-opt2: do2
+      deployer-opt3: do3
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -46,7 +50,7 @@ jobs:
         run: |
           echo "Changeset: ${{github.event.inputs.changeset-only}}"
           echo "Account: ${{github.event.inputs.account}}"
-          echo "Weird thing: ${{env['deployer-'github.event.inputs.account]}}"
+          echo "Weird thing: ${{jobs.step1.env[github.event.inputs.account]}}"
           echo "That's all folks!"
       - name: The freaking test
         run: |
