--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,5 +51,5 @@ jobs:
         run: |
           echo "The choose is: ${{env[github.event.inputs.account]}}"
           echo "It will select ${{join('deployer-',env[github.event.inputs.account])}}"
-          echo "Weird thing: ${{env[join('deployer-',env[github.event.inputs.account]t)]}}"
+          echo "Weird thing: ${{env[join('deployer-',env[github.event.inputs.account])]}}"
 
