--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
   # This workflow contains a single job called "build"
   step1:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ${{env[format('deployer-{0}',env[github.event.inputs.account])]}}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
