--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,6 +60,6 @@ jobs:
       - name: The freaking test
         run: |
           echo "The choose is: ${{env[github.event.inputs.account]}}"
-          echo "It will select ${{format('deployer-{0}',env[github.event.inputs.account])}}"
+          echo "It will select ${{format('deployer-{0}',github.event.inputs.account)}}"
           echo "Weird thing: ${{env[format('deployer-{0}',env[github.event.inputs.account])]}}"
 
